# alphavantagecpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
alphavantagecpp/: CMakeLists.txt  alphavantage.hpp
alphavantagecpp/alphavantage/api/: apiparams.hpp  genericreq.cpp
alphavantagecpp/alphavantage/api/cryptocurrencies/: DIGITAL_CURRENCY_DAILY.cpp  DIGITAL_CURRENCY_DAILY.hpp  DIGITAL_CURRENCY_MONTHLY.hpp  DIGITAL_CURRENCY_WEEKLY.hpp  cryptocurrencies.cpp
alphavantagecpp/alphavantage/api/forex/: CURRENCY_EXCHANGE_RATE.cpp  CURRENCY_EXCHANGE_RATE.hpp  FX_DAILY.cpp  FX_DAILY.hpp  FX_INTRADAY.cpp  FX_INTRADAY.hpp  FX_MONTHLY.cpp  FX_MONTHLY.hpp  forex.cpp  (+2 more)
alphavantagecpp/alphavantage/core/: network.hpp
alphavantagecpp/alphavantage/nw/: network.cpp  network.hpp
alphavantagecpp/alphavantage/util/: stringutil.hpp
alphavantagecpp/api/: genericreq.hpp
alphavantagecpp/api/cryptocurrencies/: DIGITAL_CURRENCY_MONTHLY.hpp  DIGITAL_CURRENCY_WEEKLY.hpp  cryptocurrencies.cpp
alphavantagecpp/api/forex/: CURRENCY_EXCHANGE_RATE.hpp  FX_WEEKLY.hpp
alphavantagecpp/api/sectorperformances/: SECTOR.hpp
alphavantagecpp/api/stocktimeseries/: Search_Endpoint.hpp  TIME_SERIES_DAILY_ADJUSTED.hpp  TIME_SERIES_INTRADAY.hpp  TIME_SERIES_MONTHLY.hpp  TIME_SERIES_MONTHLY_ADJUSTED.hpp  TIME_SERIES_WEEKLY.hpp
alphavantagecpp/api/technicalindicators/: AD.hpp  ADOSC.hpp  ADX.hpp  ADXR.hpp  AROON.hpp  AROONOSC.hpp  BOP.hpp  EMA.hpp  HT_SINE.hpp  HT_TRENDMODE.hpp  KAMA.hpp  MIDPRICE.hpp  MINUS_DI.hpp  MINUS_DM.hpp  MOM.hpp  NATR.hpp  OBV.hpp  ROC.hpp  ROCR.hpp  STOCHF.hpp  TEMA.hpp  TRANGE.hpp  TRIMA.hpp  WILLR.hpp
alphavantagecpp/include/: alphavantage.hpp
alphavantagecpp/nw/: network.cpp
(+232 files in other folders)
